--- a/.github/workflows/publish-test-pypi.yml
+++ b/.github/workflows/publish-test-pypi.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: ["ubuntu-latest", "macos-14"] # TODO: "macos-12", "windows-latest"
+        os: ["ubuntu-latest", "macos-14", "windows-latest"] # TODO: "macos-12"
 
     steps:
       - uses: actions/checkout@v4
