--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,12 @@ description = "Python package for custom fixed-point and floating-point formats"
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
-    "Programming Language :: Python :: 3",
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3",
+    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
 ]
 
 [project.urls]
