--- a/.github/workflows/run_coverage.yml
+++ b/.github/workflows/run_coverage.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         sudo apt-get install -yy lcov
         python -m pip install --upgrade pip
-        python -m pip install pytest-cov gcovr ninja pybind11 meson-python numpy
+        python -m pip install pytest-cov gcovr ninja meson-python numpy
     - name: Install APyTypes
       run: |
         export CPPFLAGS='-O0 --coverage -fprofile-abs-path'
