--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - uses: ilammy/msvc-dev-cmd@v1  # Active MSVC environment on Windows virtual env
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
@@ -35,6 +37,7 @@ jobs:
         python -m pip install --upgrade pip
     - name: Install APyTypes
       run: |
+        git fetch --tags
         python -m pip install .[test] -v
     - name: Test with pytest
       run: |
