--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-build-backend = 'mesonpy'
-requires = ['meson-python']
-
 [project]
 name = "apytypes"
 dynamic = ['version']
@@ -20,11 +16,9 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://apytypes.github.io/"
+Homepage = "https://github.com/apytypes/apytypes/"
 Issues = "https://github.com/apytypes/apytypes/issues"
-
-[tool.meson-python.args]
-install = ['--skip-subprojects']
+Documentation = "https://apytypes.github.io/apytypes/"
 
 [project.optional-dependencies]
 docs = [
@@ -48,6 +42,20 @@ comparison = [
     "numpy",
     "matplotlib",
 ]
+
+[build-system]
+build-backend = 'mesonpy'
+requires = ['meson-python', 'setuptools_scm>=7']
+
+[tool.meson-python.args]
+install = ['--skip-subprojects']
+
+[tool.setuptools_scm]
+version_scheme = "release-branch-semver"
+local_scheme = "node-and-date"
+write_to = "lib/apytypes/_version.py"
+parentdir_prefix_version = "apytypes-"
+fallback_version = "0.0+UNKNOWN"
 
 [tool.pytest.ini_options]
 markers = [
