--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,10 @@ repos:
     - id: check-merge-conflict
     - id: check-toml
     - id: end-of-file-fixer
+  - repo: https://github.com/crate-ci/typos
+    rev: v1.20.7
+    hooks:
+    - id: typos
   - repo: https://github.com/pre-commit/mirrors-clang-format
     rev: v18.1.3
     hooks:
