--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,18 +22,25 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13-dev"]
         os: ["macos-12", "ubuntu-latest", "windows-latest", "macos-14"]
-        numpy-version: ["1.26.4", "2.0.0rc1"]
+        numpy-version: ["1.26.4", "2.0.0rc2"]
         exclude:
-          - os: "macos-14"
+          # Only test NumPy2 on 3.12 for now
+          - numpy-version: "2.0.0rc2"
             python-version: "3.9"
-          - numpy-version: "2.0.0rc1"
-            python-version: "3.9"
-          - numpy-version: "2.0.0rc1"
+          - numpy-version: "2.0.0rc2"
             python-version: "3.10"
-          - numpy-version: "2.0.0rc1"
+          - numpy-version: "2.0.0rc2"
             python-version: "3.11"
+          - numpy-version: "2.0.0rc2"
+            python-version: "3.13-dev"
+          # No pre-compiled Python 3.13, fails while compiling NumPy
+          - os: "macos-12"
+            python-version: "3.13-dev"
+          # No pre-compiled Python 3.13, fails while compiling NumPy
+          - os: "macos-14"
+            python-version: "3.13-dev"
 
     runs-on: ${{ matrix.os }}
 
