--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,9 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+#
+# This workflow will install Python dependencies and run the APyTypes test suite.
+#
+# For more information see:
+# https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+# #
 
 name: Unit tests
 concurrency:
@@ -20,9 +24,16 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         os: ["macos-12", "ubuntu-latest", "windows-latest", "macos-14"]
+        numpy-version: ["1.26.4", "2.0.0rc1"]
         exclude:
           - os: "macos-14"
             python-version: "3.9"
+          - numpy-version: "2.0.0rc1"
+            python-version: "3.9"
+          - numpy-version: "2.0.0rc1"
+            python-version: "3.10"
+          - numpy-version: "2.0.0rc1"
+            python-version: "3.11"
 
     runs-on: ${{ matrix.os }}
 
@@ -38,6 +49,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install numpy==${{ matrix.numpy-version }}
     - name: Install APyTypes
       run: |
         git fetch --tags
