--- a/.github/workflows/run_coverage.yml
+++ b/.github/workflows/run_coverage.yml
@@ -41,6 +41,7 @@ jobs:
       run: |
         pytest lib/test --cov-report=xml --cov=lib --log-level=DEBUG --color=yes
     - name: Format coverage data
+      if: ${{ !cancelled()}}
       run: |
         lcov --rc lcov_branch_coverage=1 --capture --directory . \
           --output-file coverage.info
@@ -50,6 +51,7 @@ jobs:
          find . -name '*.gc*' -delete
         # gcovr --xml-pretty --exclude-unreachable-branches --print-summary -o cobertura.xml --root $PWD
     - name: Upload coverage reports to Codecov
+      if: ${{ !cancelled()}}
       uses: codecov/codecov-action@v3
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
