--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,40 +15,47 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
 ]
+keywords = ["fixed-point", "floating-point", "finite word length"]
 
 [project.urls]
-Homepage = "https://github.com/apytypes/apytypes/"
+Repository = "https://github.com/apytypes/apytypes/"
 Issues = "https://github.com/apytypes/apytypes/issues"
+Homepage = "https://apytypes.github.io/"
 Documentation = "https://apytypes.github.io/apytypes/"
+Changelog = "https://github.com/apytypes/apytypes/blob/main/CHANGELOG.md"
 
 [project.optional-dependencies]
 docs = [
-    "breathe",
-    "furo",
-    "matplotlib",
-    "numpydoc",
-    "sphinx",
-    "sphinx_copybutton",
-    "sphinx_gallery",
+    "breathe>=4.35",
+    "furo>=2024",
+    "matplotlib>=3.7",
+    "numpydoc>=1.7",
+    "sphinx>=7",
+    "sphinx_copybutton>=0.5",
+    "sphinx_gallery>=0.16",
 ]
-test = ["numpy", "pytest"]
-dev = ["pybind11-stubgen", "nanobind"]
-benchmark = ["numpy", "pytest", "pytest-benchmark"]
+test = ["numpy>=1.25", "pytest>=8.2"]
+dev = ["nanobind>=1.9.2"]
+benchmark = ["numpy>=1.25", "pytest>=8.2", "pytest-benchmark"]
 comparison = [
     "fpbinary",
     "fixedpoint",
     "fxpmath",
     "spfpm",
     "numfi",
-    "numpy",
-    "matplotlib",
+    "numpy>=1.25",
+    "matplotlib>=3.7",
 ]
 
 [build-system]
 build-backend = 'mesonpy'
-requires = ['meson-python', 'setuptools_scm>=7']
+requires = ['meson-python>=0.16', 'setuptools_scm>=8.1']
 
 [tool.meson-python.args]
 install = ['--skip-subprojects']
