Update .gitignore, excluding more artificats from docs build

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ _version.pyi
 # Documentation ignores
 docs/_build/
 docs/xml/
+docs/examples/
+docs/sg_execution_times.rst
+docs/*.png
+comparison/*.png
 
 # C++ source ignores
 *.gcda
