--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ docs = [
     "sphinx>=7",
     "sphinx_copybutton>=0.5",
     "sphinx_gallery>=0.16",
+    "m2r2",
+    "docutils<=0.20",  # Pin to get around limitation in m2r2
 ]
 test = ["numpy>=1.25", "pytest>=8.2"]
 dev = ["nanobind>=1.9.2"]
