--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,8 +118,8 @@ target-version = "py39"
 # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
 # McCabe complexity (`C901`) by default.
 select = ["E4", "E7", "E9", "F"]
-ignore = ["F822"]  # Should not be ignored, but as nanobind stubgen does not include __version__...
-
+ignore = ["F822",  # Should not be ignored, but as nanobind stubgen does not include __version__...
+          "E712"] # Test should be rewritten to not compare with False/True
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
 unfixable = []
