--- a/.github/workflows/stub-and-doctests.yml
+++ b/.github/workflows/stub-and-doctests.yml
@@ -40,6 +40,7 @@ jobs:
       run: |
         ./stubgen.sh
         ruff format lib/apytypes/*.pyi
+        git diff
     - name: Test with doctest
       run: |
         python -m doctest lib/apytypes/*.pyi
