--- a/.github/workflows/publish-test-pypi.yml
+++ b/.github/workflows/publish-test-pypi.yml
@@ -35,7 +35,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: ["ubuntu-latest", "macos-12", "macos-14", "windows-2019"]
+        os: ["ubuntu-latest", "macos-12", "macos-14", "windows-latest"]
 
     steps:
       - uses: actions/checkout@v4
