--- a/.github/workflows/publish-test-pypi.yml
+++ b/.github/workflows/publish-test-pypi.yml
@@ -24,6 +24,7 @@ jobs:
     name: Build wheel ${{ matrix.os }} 📦
     if: >-
       (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+      (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') ||
       github.event_name == 'pull_request' && (
         (
           github.event.action == 'labeled' &&
@@ -59,6 +60,7 @@ jobs:
     name: Build source distribution
     if: >-
       (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+      (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') ||
       github.event_name == 'pull_request' && (
         (
           github.event.action == 'labeled' &&
