--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,25 +22,35 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13-dev"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.13t"]
         os: ["macos-12", "ubuntu-latest", "windows-latest", "macos-14"]
-        numpy-version: ["1.26.4", "2"]
+        numpy-version: [">=1.26.4,<2", ">=2.1"]
         exclude:
           # Only test NumPy2 on 3.12 for now
-          - numpy-version: "2"
+          - numpy-version: ">=2.1"
             python-version: "3.9"
-          - numpy-version: "2"
+          - numpy-version: ">=2.1"
             python-version: "3.10"
-          - numpy-version: "2"
+          - numpy-version: ">=2.1"
             python-version: "3.11"
-          - numpy-version: "2"
-            python-version: "3.13-dev"
+          - numpy-version: ">=2.1"
+            python-version: "3.13"
+          # Do not test with NumPy 1 on free-threaded Python
+          - numpy-version: ">=1.26.4,<2"
+            python-version: "3.13t"
           # No pre-compiled Python 3.13, fails while compiling NumPy
           - os: "macos-12"
-            python-version: "3.13-dev"
+            python-version: "3.13"
+          - os: "macos-12"
+            python-version: "3.13t"
           # No pre-compiled Python 3.13, fails while compiling NumPy
           - os: "macos-14"
-            python-version: "3.13-dev"
+            python-version: "3.13"
+          - os: "macos-14"
+            python-version: "3.13t"
+          # No free-threaded Python on Windows
+          - os: "windows-latest"
+            python-version: "3.13t"
 
     runs-on: ${{ matrix.os }}
 
@@ -51,16 +61,40 @@ jobs:
     - uses: ilammy/msvc-dev-cmd@v1  # Active MSVC environment on Windows virtual env
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
+      if: matrix.python-version != '3.13t'
       with:
         python-version: ${{ matrix.python-version }}
+        allow-prereleases: true
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: deadsnakes/action@6c8b9b82fe0b4344f4b98f2775fcc395df45e494  # v3.1.0
+      if: matrix.python-version == '3.13t'
+      with:
+        python-version: '3.13'
+        nogil: true
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install numpy==${{ matrix.numpy-version }}
+    - name: Install NumPy
+      if: matrix.python-version != '3.13t'
+      run: |
+        python -m pip install 'numpy${{ matrix.numpy-version }}'
+    - name: Install NumPy
+      if: matrix.python-version == '3.13t'
+      run: |
+        python -m pip install \
+            --pre \
+            --index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple \
+            --upgrade --only-binary=:all: 'numpy${{ matrix.numpy-version }}'
     - name: Install APyTypes
       run: |
         git fetch --tags
         python -m pip install .[test] -v
     - name: Test with pytest
+      if: matrix.python-version == '3.13t'
+      run: |
+        export PYTHON_GIL=0
+        pytest --color=yes lib/test
+    - name: Test with pytest
+      if: matrix.python-version != '3.13t'
       run: |
         pytest --color=yes lib/test
