--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,6 +18,12 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.10"
+      - uses: nickg/setup-nvc-ci@v1
+        with:
+          version: latest
+      - name: Check simulator installation
+        run: |
+          nvc --version # Make sure nvc was installed successfully
       - name: Install dependencies
         run: |
           sudo apt-get install -yy doxygen
