--- a/.github/workflows/tests-min-deps.yml
+++ b/.github/workflows/tests-min-deps.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest cocotb>=1.9.1
+        python -m pip install pytest
     - name: Install APyTypes
       run: |
         git fetch --tags
