src: add type APyCFixed

--- a/meson.build
+++ b/meson.build
@@ -86,6 +86,8 @@ py3.extension_module(
     '_apytypes',
     sources : files([
         'extern/mini-gmp/mini-gmp.c',
+        'src/apycfixed.cc',
+        'src/apycfixed_wrapper.cc',
         'src/apyfixed.cc',
         'src/apyfixed_util.cc',
         'src/apyfixed_wrapper.cc',
@@ -100,8 +102,8 @@ py3.extension_module(
         'src/apyfloatarray_wrapper.cc',
         'src/apytypes_common.cc',
         'src/apytypes_context_wrapper.cc',
-        'src/apytypes_wrapper.cc',
         'src/apytypes_simd.cc',
+        'src/apytypes_wrapper.cc',
     ]),
     dependencies : [py3_dep, nanobind_dep, hwy_dep, fmt_dep],
     subdir: 'apytypes',
