--- a/meson.build
+++ b/meson.build
@@ -86,18 +86,20 @@ py3.extension_module(
     '_apytypes',
     sources : files([
         'extern/mini-gmp/mini-gmp.c',
+        'src/apycfloatarray.cc',
+        'src/apycfloatarray_wrapper.cc',
         'src/apycfixed.cc',
         'src/apycfixed_wrapper.cc',
         'src/apycfixedarray.cc',
         'src/apycfixedarray_wrapper.cc',
+        'src/apycfloat.cc',
+        'src/apycfloat_wrapper.cc',
         'src/apyfixed.cc',
-        'src/apyfixed_util.cc',
         'src/apyfixed_wrapper.cc',
         'src/apyfixedarray.cc',
         'src/apyfixedarray_iterator.cc',
         'src/apyfixedarray_wrapper.cc',
         'src/apyfloat.cc',
-        'src/apyfloat_util.cc',
         'src/apyfloat_wrapper.cc',
         'src/apyfloatarray.cc',
         'src/apyfloatarray_iterator.cc',
