--- a/.github/workflows/tests-cocotb.yml
+++ b/.github/workflows/tests-cocotb.yml
@@ -24,17 +24,18 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
       with:
         fetch-depth: 0
-    - uses: nickg/setup-nvc-ci@v1
+        persist-credentials: false
+    - uses: nickg/setup-nvc-ci@40dcbd31cf07b60479a31f94a5df70c0bfbb9ce5  # v1v1
       with:
         version: latest
     - name: Check simulator installation
       run: |
         nvc --version # Make sure nvc was installed successfully
     - name: Set up Python 3.10
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b  # v5.3.0
       with:
         python-version: "3.10"
     - name: Install dependencies
