--- a/meson.build
+++ b/meson.build
@@ -33,6 +33,7 @@ if get_option('limb_size') == '64'
         language: ['cpp', 'c'],
     )
 endif
+add_project_arguments('-DCMAKE_VERBOSE_MAKEFILE=ON', language: ['cpp', 'c'])
 
 # Disable nanobind leak warnings on release builds
 if get_option('buildtype') == 'release'
@@ -131,6 +132,8 @@ py3.extension_module(
         'src/apytypes_wrapper.cc',
     ]),
     dependencies : [py3_dep, nanobind_dep, hwy_dep, fmt_dep],
+    cpp_args: '-fexceptions',
+    link_args: '-fexceptions',
     subdir: 'apytypes',
     install: true,
 )
