--- a/.github/workflows/run_coverage.yml
+++ b/.github/workflows/run_coverage.yml
@@ -44,12 +44,17 @@ jobs:
     - name: Format coverage data
       if: ${{ !cancelled()}}
       run: |
-        lcov --rc lcov_branch_coverage=1 --capture --directory . \
+        lcov --rc branch_coverage=1 --rc geninfo_unexecuted_blocks=1 \
+          --ignore-errors mismatch,mismatch --ignore-errors unused \
+          --ignore-errors mismatch --capture --directory . \
           --output-file coverage.info
-        lcov --rc lcov_branch_coverage=1 --output-file coverage.info \
-          --extract coverage.info $PWD/src/'*' $PWD/lib/'*'
-        lcov --rc lcov_branch_coverage=1 --list coverage.info
-         find . -name '*.gc*' -delete
+        lcov --rc branch_coverage=1 --rc geninfo_unexecuted_blocks=1 \
+          --ignore-errors mismatch,mismatch --ignore-errors unused \
+          --ignore-errors mismatch --extract coverage.info $PWD/src/'*'
+        lcov --rc branch_coverage=1 --rc geninfo_unexecuted_blocks=1 \
+          --ignore-errors mismatch,mismatch --ignore-errors unused \
+          --ignore-errors mismatch --list coverage.info
+        find . -name '*.gc*' -delete
         # gcovr --xml-pretty --exclude-unreachable-branches --print-summary -o cobertura.xml --root $PWD
     - name: Upload coverage reports to Codecov
       if: ${{ !cancelled()}}
